Another attempt at fixing squished cities

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -182,6 +182,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  height: auto;
 }
 
 .cities-row img {
