--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -102,7 +102,7 @@
     position: absolute;
     top: 47vh;
     font-size: 2rem;
-    background: #0000ffaa;
+    background: #ff0000aa;
   }
 
   .main-image {
